audit: radiografía total del proyecto